# global-allocator

./: .gitattributes  Cargo.toml  LICENSE-APACHE  README.md
examples/: debug_allocator.rs
src/: lib.rs
tests/: debug_allocator.rs
